layout word and blog

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
               sint. Velit officia consequat duis enim velit mollit. Exercitation
               veniam consequat sunt nostrud amet.
             </p>
-            <button class="hero-btn" type="button">Check my Work</button>
+            <form action="work.html" target="_blank">
+              <button class="hero-btn">Check my Work</button>
+            </form>
           </div>
           <div class="hero-img"><img src="./images/hero/photo.png" alt="my photo" width="252" height="255" /></div>
         </section>
